Fix navbar color on mobile 2

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -70,8 +70,9 @@
     rgba(255, 255, 255, 0.1),
     rgba(255, 255, 255, 0)
   );
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px) !important;
+  backdrop-filter: blur(10px) !important;
+
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.37);
 }
